[NEW] screenshots [NEW] upload enabled when trip selected only [NEW] Button text Clip

--- a/SimRa/de.lproj/Main.strings
+++ b/SimRa/de.lproj/Main.strings
@@ -172,3 +172,6 @@
 
 /* Class = "UILabel"; text = "Delivery Van"; ObjectID = "zmb-dx-KDO"; */
 "zmb-dx-KDO.text" = "Lieferwagen";
+
+/* Class = "UIBarButtonItem"; title = "Clip"; ObjectID = "VHZ-9D-W3q"; */
+"VHZ-9D-W3q.title" = "Schnipp";
