--- a/SimRa/de.lproj/Main.strings
+++ b/SimRa/de.lproj/Main.strings
@@ -128,6 +128,9 @@
 /* Class = "UILabel"; text = "Position of your iPhone"; ObjectID = "iWU-L2-tzF"; */
 "iWU-L2-tzF.text" = "Wo haben Sie Ihr iPhone";
 
+/* Class = "UILabel"; text = "Version"; ObjectID = "ysy-Na-eJd"; */
+"ysy-Na-eJd.text" = "Version";
+
 /* Class = "UILabel"; text = "Taxi"; ObjectID = "j7W-tE-H1P"; */
 "j7W-tE-H1P.text" = "Taxi";
 
