--- a/SimRa/de.lproj/Main.strings
+++ b/SimRa/de.lproj/Main.strings
@@ -181,3 +181,7 @@
 
 /* Class = "UIBarButtonItem"; title = "Upload"; ObjectID = "MJ7-9y-XJz"; */
 "MJ7-9y-XJz.title" = "Hochladen";
+
+/* Class = "UIBarButtonItem"; title = "Settings"; ObjectID = "hzM-QB-nuc"; */
+"hzM-QB-nuc.title" = "Einstellungen";
+
