--- a/SimRa/en.lproj/Main.strings
+++ b/SimRa/en.lproj/Main.strings
@@ -209,3 +209,5 @@
 /* Class = "UIBarButtonItem"; title = "Stop"; ObjectID = "dZi-32-hxA"; */
 "dZi-32-hxA.title" = "Stop";
 
+/* Class = "UIBarButtonItem"; title = "Set Default"; ObjectID = "VDG-DB-ai5"; */
+"VDG-DB-ai5.title" = "Set Default";
