--- a/SimRa/en.lproj/Main.strings
+++ b/SimRa/en.lproj/Main.strings
@@ -182,6 +182,9 @@
 /* Class = "UILabel"; text = "Motorcycle"; ObjectID = "yNs-N4-TFw"; */
 "yNs-N4-TFw.text" = "Motorcycle";
 
+/* Class = "UILabel"; text = "E-Scooter"; ObjectID = "FRX-9C-cpb"; */
+"FRX-9C-cpb.text" = "E-Scooter";
+
 /* Class = "UILabel"; text = "Title"; ObjectID = "zPk-B6-o6t"; */
 "zPk-B6-o6t.text" = "Title";
 
