--- a/SimRa/de.lproj/Main.strings
+++ b/SimRa/de.lproj/Main.strings
@@ -158,6 +158,9 @@
 /* Class = "UILabel"; text = "Idle"; ObjectID = "psv-hA-tkp"; */
 "psv-hA-tkp.text" = "Stillstand";
 
+/* Class = "UILabel"; text = "Scary Events"; ObjectID = "AbA-66-1FG"; */
+"AbA-66-1FG.text" = "Beängstigende Ereignisse";
+
 /* Class = "UILabel"; text = "Length"; ObjectID = "tir-BI-xQG"; */
 "tir-BI-xQG.text" = "Distanz";
 
