[NEW] Additional statistics #23

--- a/SimRa/de.lproj/Main.strings
+++ b/SimRa/de.lproj/Main.strings
@@ -161,8 +161,14 @@
 /* Class = "UILabel"; text = "Scary Events"; ObjectID = "AbA-66-1FG"; */
 "AbA-66-1FG.text" = "Beängstigende Ereignisse";
 
-/* Class = "UILabel"; text = "Length"; ObjectID = "tir-BI-xQG"; */
+/* Class = "UILabel"; text = "Distance"; ObjectID = "tir-BI-xQG"; */
 "tir-BI-xQG.text" = "Distanz";
+
+/* Class = "UILabel"; text = "Average Speed"; ObjectID = "D3n-2Y-FbO"; */
+"D3n-2Y-FbO.text" = "∅-Geschwindigkeit";
+
+/* Class = "UILabel"; text = "CO2 Saved"; ObjectID = "TUw-ey-TsK"; */
+"TUw-ey-TsK.text" = "Eingespartes CO2";
 
 /* Class = "UILabel"; text = "55"; ObjectID = "ts0-v6-Oh2"; */
 "ts0-v6-Oh2.text" = "55";
