[NEW] additional statistics: average idle time, average distance #28 [NEW] version 13

--- a/SimRa/de.lproj/Main.strings
+++ b/SimRa/de.lproj/Main.strings
@@ -164,8 +164,15 @@
 /* Class = "UILabel"; text = "Distance"; ObjectID = "tir-BI-xQG"; */
 "tir-BI-xQG.text" = "Distanz";
 
+/* Class = "UILabel"; text = "Average Distance"; ObjectID = "1xw-dA-InH"; */
+"1xw-dA-InH.text" = "∅-Distanz";
+
+/* Class = "UILabel"; text = "Average Idle Time"; ObjectID = "oBk-eL-4Fm"; */
+"oBk-eL-4Fm.text" = "∅-Distanz";
+
+
 /* Class = "UILabel"; text = "Average Speed"; ObjectID = "D3n-2Y-FbO"; */
-"D3n-2Y-FbO.text" = "∅-Geschwindigkeit";
+"D3n-2Y-FbO.text" = "∅-Stillstandsdauer";
 
 /* Class = "UILabel"; text = "CO2 Saved"; ObjectID = "TUw-ey-TsK"; */
 "TUw-ey-TsK.text" = "Eingespartes CO2";
