--- a/SimRa/de.lproj/Main.strings
+++ b/SimRa/de.lproj/Main.strings
@@ -238,3 +238,6 @@
 
 /* Class = "UILabel"; text = "Delivery Van"; ObjectID = "39Z-h9-cEF"; */
 "39Z-h9-cEF.text" = "Immer";
+
+/* Class = "UIButton"; normalTitle = "Nah"; ObjectID = "0Ac-hH-O0E"; */
+"0Ac-hH-O0E.normalTitle" = "Nächste";
