--- a/SimRa/de.lproj/Main.strings
+++ b/SimRa/de.lproj/Main.strings
@@ -241,3 +241,9 @@
 
 /* Class = "UIButton"; normalTitle = "Nah"; ObjectID = "0Ac-hH-O0E"; */
 "0Ac-hH-O0E.normalTitle" = "Nächste";
+
+/* Class = "UITableViewSection"; headerTitle = "General Settings"; ObjectID = "32b-Vh-PWn"; */
+"32b-Vh-PWn.headerTitle" = "Allgemeine Einstellungen";
+
+/* Class = "UILabel"; text = "Online AI Ride Analysis"; ObjectID = "tf0-as-NvS"; */
+"tf0-as-NvS.text" = "Online AI Fahrtanalyse";
