--- a/SimRa/de.lproj/Localizable.strings
+++ b/SimRa/de.lproj/Localizable.strings
@@ -49,9 +49,6 @@
 /* MyTrips View Context menu export title */
 "Manual Export" = "Manueller Export";
 
-/* Error message if region is not set yet */
-"Missing Region" = "Fehlende Region";
-
 /* New */
 "New" = "Neu";
 
@@ -86,7 +83,7 @@
 "SimRa" = "SimRa";
 
 /* SimRa now supports many regions. Do you want to set a region to improve your contributions to the project? This way, we can increase the significance of our results */
-"SimRa now supports many regions. Do you want to set a region to improve your contributions to the project? This way, we can increase the significance of our results." = "SimRa unterstützt eine Vielzahl an Regionen. Möchten Sie eine Region einstellen, um Ihren Beitrag zu verbessern? Dadurch können wir pro Region aussagekräftigere Ergebnisse liefern.";
+"Please choose your correct region, so that we can analyse your ride correctly. Your selected region:" = "Bitte stellen Sie Ihre Region ein, damit Ihre Daten richtig ausgewertet werden können. Ihre derzeit ausgewählte Region ist:";
 
 /* Start */
 "Start" = "Start";
