--- a/SimRa/SupportingFiles/de.lproj/Localizable.strings
+++ b/SimRa/SupportingFiles/de.lproj/Localizable.strings
@@ -111,3 +111,14 @@
 
 /* Table Select None */
 "None" = "Keine";
+
+
+/* Acknowledgement to send configuration*/
+"Attention! Only tap the Continue button, if you were asked to do so by the SimRa team. By Pressing the Upload button in the next step, you send your SimRa configuration to the SimRa team. You can also specify to upload the last 10 rides or all rides." = "Achtung! Tippen Sie nur dann auf die Schaltfläche Weiter, wenn Sie vom SimRa-Team dazu aufgefordert wurden. Wenn Sie im nächsten Schritt auf die Schaltfläche Hochladen tippen, senden Sie Ihre SimRa-Konfiguration an das SimRa-Team. Sie können auch angeben, ob Sie die letzten 10 Fahrten oder alle Fahrten hochladen möchten.";
+
+"Send local app data to SimRa team" = "Lokale App-Daten an das SimRa-Team senden";
+
+"Do you also want to send rides?" = "Möchten Sie auch Fahrten senden?";
+"Yes, all" = "Ja, alles";
+"Yes, the last" = "Ja, die letzten";
+"No, don't send any rides" = "Nein, schicken Sie keine Fahrten";
