--- a/SimRa/SupportingFiles/de.lproj/Localizable.strings
+++ b/SimRa/SupportingFiles/de.lproj/Localizable.strings
@@ -122,3 +122,5 @@
 "Yes, all" = "Ja, alles";
 "Yes, the last" = "Ja, die letzten";
 "No, don't send any rides" = "Nein, schicken Sie keine Fahrten";
+"Files uploaded successfully" = "Dateien erfolgreich hochgeladen";
+"Something went wrong. Please try again later" = "Etwas ist schief gelaufen. Bitte versuchen Sie es später noch einmal";
