--- a/SimRa/SupportingFiles/en.lproj/Localizable.strings
+++ b/SimRa/SupportingFiles/en.lproj/Localizable.strings
@@ -121,3 +121,5 @@
 "Yes, all" = "Yes, all";
 "Yes, the last" = "Yes, the last";
 "No, don't send any rides" = "No, don't send any rides";
+"Files uploaded successfully" = "Files uploaded successfully";
+"Something went wrong. Please try again later" = "Something went wrong. Please try again later";
