[NEW] GPX, GeoJson and KML Export of SimRa rides #56

--- a/SimRa/de.lproj/Localizable.strings
+++ b/SimRa/de.lproj/Localizable.strings
@@ -49,6 +49,15 @@
 /* MyTrips View Context menu export title */
 "Manual Export" = "Manueller Export";
 
+/* MyTrips View Context menu export GPX title */
+"GPX Export" = "GPX Export";
+
+/* MyTrips View Context menu export GeoJSON title */
+"GeoJSON Export" = "GeoJSON Export";
+
+/* MyTrips View Context menu export KML title */
+"KML Export" = "KML Export";
+
 /* New */
 "New" = "Neu";
 
