[FIX] Typo in Settings (German) #54

--- a/SimRa/de.lproj/Main.strings
+++ b/SimRa/de.lproj/Main.strings
@@ -42,7 +42,7 @@
 "5h9-tM-U6A.title" = "Fahrten";
 
 /* Class = "UITableViewSection"; headerTitle = "Privacy: Hide part of your trips"; ObjectID = "8Fn-ss-h83"; */
-"8Fn-ss-h83.headerTitle" = "Privatspähre: Anfang der Fahrt";
+"8Fn-ss-h83.headerTitle" = "Privatsphäre: Anfang der Fahrt";
 
 /* Class = "UILabel"; text = "Thereof Scary"; ObjectID = "AbA-66-1FG"; */
 "AbA-66-1FG.text" = "Davon beängstigend";
